cmake_minimum_required(VERSION 2.8.9)
PROJECT(fileserver)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/src SRC_LIST)
find_package(ImageMagick COMPONENTS MagickWand)
message("ImageMagick wand libs: ${ImageMagick_LIBRARIES}")
add_executable(fileserver ${SRC_LIST})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/deps)
include_directories(${ImageMagick_INCLUDE_DIRS})
link_directories(${ImageMagick_LIBRARIES})
find_library(LIBEVENT event PATHS /usr/local/lib)
message("libevent libs: ${LIBEVENT}")
find_library(LIBUUID uuid ${CMAKE_CURRENT_SOURCE_DIR}/deps/ossp)
message("libuuid libs: ${LIBUUID}")
find_library(LIBJSON json-c PATHS ${CMAKE_CURRENT_SOURCE_DIR}/deps/json-c)
message("libjson-c libs: ${LIBJSON}")
target_link_libraries(fileserver ${LIBEVENT} ${LIBUUID} ${LIBJSON} ${ImageMagick_LIBRARIES} pthread)

IF(CMAKE_BUILD_TYPE MATCHES Debug)
    message("Debug build")
    set(CMAKE_C_FLAGS "-v -g -O0")
ELSE()
    message("Release build")
    set(CMAKE_C_FLAGS "-v -O2")
ENDIF()


